manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  labels:
    app: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
      - name: freshrss
        image: quay.io/mhrivnak/freshrss:latest
        ports:
        - containerPort: 8080
