manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: freshrss
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: freshrss
